[package]
name = "llama-cpp-ggml"
description = "llama.cpp bindings for Rust"
version = "0.1.103"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/utilityai/llama-cpp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.11"
ggml-all-sys-2 = { workspace = true}
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }

[dev-dependencies]
encoding_rs = { workspace = true }

[features]
default = ["openmp", "android-shared-stdcxx"]
cuda = ["ggml-all-sys-2/cuda", ]
hipblas = ["ggml-all-sys-2/hipblas", ]
metal = ["ggml-all-sys-2/metal", ]
vulkan = ["ggml-all-sys-2/vulkan", ]
openmp = ["ggml-all-sys-2/openmp"]
sampler = []
# Only has an impact on Android.
android-shared-stdcxx = ["ggml-all-sys-2/shared-stdcxx"]


[target.'cfg(all(target_os = "macos", any(target_arch = "aarch64", target_arch = "arm64")))'.dependencies]
ggml-all-sys-2 = { path = "../ggml-all-sys-2", version = "0.1.69", features = [
] }

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["sampler"]

